kustomize/overlay/7.2.0/defaults/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ig
  labels:
    app.kubernetes.io/component: secure-api-gateway
    app.kubernetes.io/instance: secure-api-gateway
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: secure-api-gateway
      app.kubernetes.io/instance: secure-api-gateway
  template:
    spec:
      containers:
      - name: ig
        imagePullPolicy: Always
        volumeMounts:
          - name: new-truststore
            mountPath: /var/ig/secrets/truststore
            readOnly: true
          - name: ig-ob-signing-key
            mountPath: /var/ig/secrets/open-banking
            readOnly: true
          - name: test-trusted-dir-keystore
            mountPath: /var/ig/secrets/test-trusted-directory
            readOnly: true
      volumes:
        # Empty volume where the igtruststore will be created by the initContainer, it can then be mounted into the ig container
        - name: new-truststore
          emptyDir: { }
        - name: ig-truststore-pem
          secret:
            secretName: ig-truststore-pem
            optional: false
        - name: ig-ob-signing-key
          secret:
            secretName: ig-ob-signing-key
            optional: false
        - name: test-trusted-dir-keystore
          secret:
            secretName: test-trusted-dir-keystore
            optional: false
