kustomize/overlay/7.2.0/defaults/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ig
  labels:
    app.kubernetes.io/component: secure-api-gateway
    app.kubernetes.io/instance: secure-api-gateway
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: secure-api-gateway
      app.kubernetes.io/instance: secure-api-gateway
