kustomize/overlay/7.2.0/defaults/ingress.yaml
# Ingress for routes requiring MTLS with Open Banking Directory issued certs
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: $(NAMESPACE)/obri-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: optional_no_ca
    nginx.ingress.kubernetes.io/large-client-header-buffers: "4 128k"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers: 4 256k
    nginx.ingress.kubernetes.io/proxy-busy-buffers_size: 256k
    nginx.ingress.kubernetes.io/error-log-level: "debug"
  name: mtls
spec:
  rules:
    - host: $(MTLS_FQDN)
      http:
        paths:
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /am/oauth2/realms/root/realms/alpha/access_token
            pathType: Exact
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /am/oauth2/realms/root/realms/alpha/register
            pathType: Prefix
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /rs/
            pathType: Prefix
  tls:
    - hosts:
        - $(MTLS_FQDN)
      secretName: obwac
---
# Ingress for access to routes protected with TLS by a ForgeRock cert
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/large-client-header-buffers: "4 128k"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers: 4 256k
    nginx.ingress.kubernetes.io/proxy-busy-buffers_size: 256k
    nginx.ingress.kubernetes.io/error-log-level: "debug"
  name: forgerock
spec:
  rules:
    - host: $(FQDN)
      http:
        paths:
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /am/
            pathType: Prefix
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /rcs/api/
            pathType: Prefix
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /rcs/ui/
            pathType: Prefix
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /jwksproxy
            pathType: Prefix
  tls:
    - hosts:
        - $(FQDN)
      secretName: sslcert
---
# Ingress for the Test Trusted Directory hosted by the gateway.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: $(NAMESPACE)/obri-ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: optional_no_ca
    nginx.ingress.kubernetes.io/large-client-header-buffers: "4 128k"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers: 4 256k
    nginx.ingress.kubernetes.io/proxy-busy-buffers_size: 256k
    nginx.ingress.kubernetes.io/error-log-level: "debug"
  name: test-trusted-directory
spec:
  rules:
    - host: $(FQDN)
      http:
        paths:
          - backend:
              service:
                name: ig
                port:
                  number: 80
            path: /jwkms/
            pathType: Prefix
  tls:
    - hosts:
        - $(FQDN)
      secretName: sslcert
